@@ -21,16 +21,36 @@ public class BattleService {
     private final BattleConfigService battleConfigService;
     private static final Random random = new Random();
 
-    // === ПРОСТАЯ ОДНОВРЕМЕННАЯ СИСТЕМА ===
-    // Все действия занимают одинаковое время
-    private static final double ACTION_DURATION = 1.0;  // Каждое действие = 1 единица времени
-    private static final int MAX_PATHFINDING_ITERATIONS = 50;
-    private static final int MAX_TURNS = 1000;  // Уменьшили для безопасности
-    private static final long TICK_DELAY_MS = 100;  // Задержка 100мс между тиками (10 действий/сек)
+    private static final double ACTION_DURATION = 1.5;
+    private static final int MAX_PATHFINDING_ITERATIONS = 100;
+    private static final double TIME_STEP = 0.1;
+
+    private static abstract class Action {
+        final BattleUnit actor;
+        Action(BattleUnit actor) { this.actor = actor; }
+        abstract void execute(List<BattleLogEntryDto> log, double currentTime, Map<String, BattleUnit> occupiedCells);
+    }
+
+    private static class AttackAction extends Action {
+        final BattleUnit target;
+        AttackAction(BattleUnit actor, BattleUnit target) { super(actor); this.target = target; }
+        @Override
+        void execute(List<BattleLogEntryDto> log, double currentTime, Map<String, BattleUnit> occupiedCells) {
+            performAttack(actor, target, log, currentTime);
+        }
+    }
+
+    private static class MoveAction extends Action {
+        final HexCoord destination;
+        MoveAction(BattleUnit actor, HexCoord destination) { super(actor); this.destination = destination; }
+        @Override
+        void execute(List<BattleLogEntryDto> log, double currentTime, Map<String, BattleUnit> occupiedCells) {
+            executeMove(actor, destination, log, currentTime, occupiedCells);
+        }
+    }
 
     public BattleResultDto fight(String questKey, List<BattlePirateDto> initialPlacement) {
         Quest quest = questService.getQuestByKey(questKey);
-
         LocationConfig locationConfig = battleConfigService.getLocationConfig(quest.getBattleLocationId());
         final Set<String> blockedCellsSet = locationConfig.getBlockedCells().stream()
                 .map(cell -> cell.getQ() + ":" + cell.getR())
@@ -39,10 +59,13 @@ public class BattleService {
         List<BattleUnit> allies = new ArrayList<>();
         List<BattleUnit> enemies = new ArrayList<>();
         List<BattleUnit> allLivingUnits = new ArrayList<>();
+        Map<String, BattleUnit> occupiedCells = new HashMap<>();
 
         initialPlacement.forEach(p -> {
             BattleUnit unit = new BattleUnit(p);
+            unit.setNextActionTime(0.0);
             allLivingUnits.add(unit);
+            occupiedCells.put(unit.getPositionKey(), unit);
             if (p.getTeam() == TeamType.ALLY) {
                 allies.add(unit);
             } else {
@@ -51,242 +74,149 @@ public class BattleService {
         });
 
         List<BattleLogEntryDto> battleLog = new ArrayList<>();
-        double globalTime = 0.0;
-        int turnCounter = 0;
+        double currentTime = 0.0;
+        PathfindingContext pathfindingContext = new PathfindingContext();
 
-        // === КЛЮЧЕВОЕ ИЗМЕНЕНИЕ: ВСЕ ДЕЙСТВУЮТ ОДНОВРЕМЕННО ===
-        while (!allies.isEmpty() && !enemies.isEmpty() && turnCounter < MAX_TURNS) {
-            turnCounter++;
-            globalTime += ACTION_DURATION;
+        while (!allies.isEmpty() && !enemies.isEmpty()) {
+            currentTime += TIME_STEP;
 
-            // Все юниты готовы к действию одновременно
-            List<BattleUnit> unitsToAct = new ArrayList<>(allLivingUnits);
+            List<BattleUnit> unitsToAct = new ArrayList<>();
+            for (BattleUnit unit : allLivingUnits) {
+                if (!unit.isDead() && unit.getNextActionTime() <= currentTime) {
+                    unitsToAct.add(unit);
+                }
+            }
 
-            // Перемешиваем для случайного порядка разрешения конфликтов
-            Collections.shuffle(unitsToAct, random);
+            if (unitsToAct.isEmpty()) continue;
 
-            // Каждый юнит планирует своё действие
+            shuffleInPlace(unitsToAct);
+
+            List<Action> plannedActions = new ArrayList<>();
+            Map<String, BattleUnit> reservedCells = new HashMap<>();
+
             for (BattleUnit actor : unitsToAct) {
                 if (actor.isDead()) continue;
 
                 List<BattleUnit> targets = actor.getTeam() == TeamType.ALLY ? enemies : allies;
                 if (targets.isEmpty()) break;
 
-                processUnitAction(actor, targets, allLivingUnits, battleLog, globalTime, blockedCellsSet);
+                BattleUnit target = findOptimalTarget(actor, targets);
+                if (target == null) continue;
+
+                int distance = calculateDistance(actor, target);
+
+                if (distance <= actor.getRange()) {
+                    // В радиусе атаки - атакуем и сбрасываем путь
+                    plannedActions.add(new AttackAction(actor, target));
+                    actor.clearPath();
+                } else {
+                    // Вне радиуса - нужно двигаться
+                    Set<String> pathfindingObstacles = new HashSet<>(blockedCellsSet);
+
+                    for (BattleUnit u : allLivingUnits) {
+                        if (u.isDead() || u == actor) continue;
+                        pathfindingObstacles.add(u.getPositionKey());
+                    }
+
+                    pathfindingObstacles.addAll(reservedCells.keySet());
+
+                    HexCoord nextStep = getNextMoveStep(actor, target, pathfindingObstacles, pathfindingContext);
+
+                    if (nextStep != null) {
+                        String nextStepKey = nextStep.toKey();
+                        if (!occupiedCells.containsKey(nextStepKey) && !reservedCells.containsKey(nextStepKey)) {
+                            plannedActions.add(new MoveAction(actor, nextStep));
+                            reservedCells.put(nextStepKey, actor);
+                        } else {
+                            // Путь заблокирован - пересчитываем в следующий раз
+                            actor.clearPath();
+                        }
+                    }
+                }
             }
 
-            // Удаляем мертвых после того, как все действия выполнены
-            allies.removeIf(BattleUnit::isDead);
-            enemies.removeIf(BattleUnit::isDead);
-            allLivingUnits.removeIf(BattleUnit::isDead);
-
-            // Добавляем задержку между тиками для плавности
-            try {
-                Thread.sleep(TICK_DELAY_MS);
-            } catch (InterruptedException e) {
-                log.warn("Battle simulation interrupted", e);
-                Thread.currentThread().interrupt();
-                break;
+            for (Action action : plannedActions) {
+                action.execute(battleLog, currentTime, occupiedCells);
+                action.actor.setNextActionTime(currentTime + ACTION_DURATION);
             }
+
+            removeDeadUnits(allies, allLivingUnits, occupiedCells);
+            removeDeadUnits(enemies, allLivingUnits, occupiedCells);
         }
 
         return buildBattleResult(quest, initialPlacement, allies, enemies, battleLog);
     }
 
-    private void processUnitAction(BattleUnit actor, List<BattleUnit> targets,
-                                   List<BattleUnit> allUnits, List<BattleLogEntryDto> log,
-                                   double currentTime, Set<String> blockedCells) {
-        if (targets.isEmpty() || actor.isDead()) return;
+    /**
+     * Получает следующий шаг движения, используя сохраненный путь или вычисляя новый
+     */
+    private HexCoord getNextMoveStep(BattleUnit mover, BattleUnit target, Set<String> obstacles, PathfindingContext context) {
+        // Проверяем, есть ли сохраненный путь и актуален ли он
+        if (mover.hasPath()) {
+            HexCoord nextStepFromPath = mover.getNextStepFromPath();
 
-        BattleUnit target = findOptimalTarget(actor, targets);
-        if (target == null) return;
-
-        int distance = calculateDistance(actor, target);
-
-        // Если в радиусе атаки - бьем
-        if (distance <= actor.getRange()) {
-            performAttack(actor, target, targets, allUnits, log, currentTime);
-        } else {
-            // Иначе двигаемся
-            performIntelligentMovement(actor, target, allUnits, log, currentTime, blockedCells);
-        }
-    }
-
-    private void performAttack(BattleUnit attacker, BattleUnit target,
-                               List<BattleUnit> targets, List<BattleUnit> allUnits,
-                               List<BattleLogEntryDto> log, double currentTime) {
-        if (target.isDead()) return; // Цель уже мертва в этом тике
-
-        int baseDamage = random.nextInt(attacker.getMaxAttack() - attacker.getMinAttack() + 1)
-                + attacker.getMinAttack();
-        int rawDamage = baseDamage - target.getArmor();
-        int actualDamage = Math.max(0, rawDamage);
-        target.takeDamage(actualDamage);
-        boolean isKill = target.isDead();
-
-        Map<String, Object> attackData = new HashMap<>();
-        attackData.put("targetId", target.getId());
-        attackData.put("damage", actualDamage);
-        attackData.put("isKill", isKill);
-        attackData.put("remainingHp", Math.max(0, target.getCurrentHp()));
-        attackData.put("targetMaxHp", target.getHp());
-        attackData.put("time", currentTime);
-        attackData.put("duration", ACTION_DURATION);
-
-        log.add(new BattleLogEntryDto(
-                BattleLogEntryDto.LogEntryType.ATTACK,
-                attacker.getId(),
-                attackData
-        ));
-
-        if (isKill) {
-            Map<String, Object> deathData = new HashMap<>();
-            deathData.put("killerId", attacker.getId());
-            deathData.put("time", currentTime);
-
-            log.add(new BattleLogEntryDto(
-                    BattleLogEntryDto.LogEntryType.DEATH,
-                    target.getId(),
-                    deathData
-            ));
-        }
-    }
-
-    private boolean performIntelligentMovement(BattleUnit mover, BattleUnit target,
-                                               List<BattleUnit> allUnits,
-                                               List<BattleLogEntryDto> log,
-                                               double currentTime,
-                                               Set<String> blockedCells) {
-        int startQ = mover.getQ();
-        int startR = mover.getR();
-
-        // Собираем препятствия (заблокированные клетки + другие юниты)
-        Set<String> obstacles = new HashSet<>(blockedCells);
-        allUnits.stream()
-                .filter(u -> u != mover && !u.isDead())
-                .forEach(u -> obstacles.add(u.getQ() + ":" + u.getR()));
-
-        // Ищем путь к цели
-        List<HexCoord> path = findPathAStar(
-                new HexCoord(startQ, startR),
-                new HexCoord(target.getQ(), target.getR()),
-                obstacles,
-                mover.getRange()
-        );
-
-        if (path != null && path.size() > 1) {
-            // Двигаемся ровно на ОДНУ клетку за ход
-            HexCoord nextStep = path.get(1);
-
-            // Проверяем, не занята ли следующая клетка другим юнитом
-            String nextStepKey = nextStep.q + ":" + nextStep.r;
-            boolean destinationBlocked = allUnits.stream()
-                    .anyMatch(u -> u != mover && !u.isDead() &&
-                            (u.getQ() + ":" + u.getR()).equals(nextStepKey));
-
-            if (destinationBlocked) {
-                // Клетка занята - не можем двигаться
-                return false;
-            }
-
-            mover.move(nextStep.q, nextStep.r);
-
-            Map<String, Object> moveData = new HashMap<>();
-            moveData.put("fromQ", startQ);
-            moveData.put("fromR", startR);
-            moveData.put("toQ", nextStep.q);
-            moveData.put("toR", nextStep.r);
-            moveData.put("targetId", target.getId());
-            moveData.put("time", currentTime);
-            moveData.put("duration", ACTION_DURATION);
-
-            log.add(new BattleLogEntryDto(
-                    BattleLogEntryDto.LogEntryType.MOVE,
-                    mover.getId(),
-                    moveData
-            ));
-            return true;
-        }
-
-        // Fallback: жадное движение
-        HexCoord greedyStep = findGreedyMove(mover, target, obstacles);
-        if (greedyStep != null && (greedyStep.q != startQ || greedyStep.r != startR)) {
-            mover.move(greedyStep.q, greedyStep.r);
-
-            Map<String, Object> moveData = new HashMap<>();
-            moveData.put("fromQ", startQ);
-            moveData.put("fromR", startR);
-            moveData.put("toQ", greedyStep.q);
-            moveData.put("toR", greedyStep.r);
-            moveData.put("targetId", target.getId());
-            moveData.put("time", currentTime);
-            moveData.put("duration", ACTION_DURATION);
-
-            log.add(new BattleLogEntryDto(
-                    BattleLogEntryDto.LogEntryType.MOVE,
-                    mover.getId(),
-                    moveData
-            ));
-            return true;
-        }
-
-        return false;
-    }
-
-    // === A* PATHFINDING ===
-    private List<HexCoord> findPathAStar(HexCoord start, HexCoord goal, Set<String> obstacles, int attackRange) {
-        PriorityQueue<AStarNode> openSet = new PriorityQueue<>(Comparator.comparingDouble(AStarNode::getF));
-        Set<String> closedSet = new HashSet<>();
-        Map<String, AStarNode> allNodes = new HashMap<>();
-
-        AStarNode startNode = new AStarNode(start, null, 0, heuristicDistance(start, goal));
-        openSet.offer(startNode);
-        allNodes.put(start.toKey(), startNode);
-
-        int[][] directions = {{1, 0}, {1, -1}, {0, -1}, {-1, 0}, {-1, 1}, {0, 1}};
-        int iterations = 0;
-
-        while (!openSet.isEmpty() && iterations < MAX_PATHFINDING_ITERATIONS) {
-            iterations++;
-            AStarNode current = openSet.poll();
-            if (current == null) break;
-
-            // Проверяем, достигли ли мы дистанции атаки
-            int distToGoal = calculateDistance(current.coord.q, current.coord.r, goal.q, goal.r);
-            if (distToGoal <= attackRange) {
-                return reconstructPath(current);
-            }
-
-            String currentKey = current.coord.toKey();
-            if (closedSet.contains(currentKey)) continue;
-            closedSet.add(currentKey);
-
-            for (int[] dir : directions) {
-                HexCoord neighbor = new HexCoord(current.coord.q + dir[0], current.coord.r + dir[1]);
-                String neighborKey = neighbor.toKey();
-
-                if (obstacles.contains(neighborKey) || closedSet.contains(neighborKey)) continue;
-
-                double tentativeG = current.g + 1;
-                AStarNode neighborNode = allNodes.get(neighborKey);
-
-                if (neighborNode == null || tentativeG < neighborNode.g) {
-                    double h = heuristicDistance(neighbor, goal);
-                    neighborNode = new AStarNode(neighbor, current, tentativeG, h);
-                    allNodes.put(neighborKey, neighborNode);
-                    openSet.offer(neighborNode);
+            // Проверяем, что следующий шаг не заблокирован
+            if (nextStepFromPath != null && !obstacles.contains(nextStepFromPath.toKey())) {
+                // Проверяем, что путь всё ещё ведёт к цели (цель не сильно сместилась)
+                HexCoord pathGoal = mover.getPathGoal();
+                if (pathGoal != null) {
+                    int goalDist = calculateDistance(pathGoal.q, pathGoal.r, target.getQ(), target.getR());
+                    // Если цель сместилась больше чем на 2 клетки - пересчитываем путь
+                    if (goalDist <= 2) {
+                        mover.advancePath(); // Переходим к следующему шагу в пути
+                        return nextStepFromPath;
+                    }
                 }
             }
+            // Путь устарел - очищаем
+            mover.clearPath();
         }
-        return null;
+
+        // Вычисляем новый путь
+        HexCoord currentPos = new HexCoord(mover.getQ(), mover.getR());
+
+        // Ищем лучшую позицию для атаки
+        List<HexCoord> attackPositions = findFreeAttackPositions(target, mover.getRange(), obstacles);
+        HexCoord goalPosition;
+
+        if (!attackPositions.isEmpty()) {
+            goalPosition = findClosestPosition(currentPos, attackPositions);
+        } else {
+            // Если все позиции заняты, идём просто к цели
+            goalPosition = new HexCoord(target.getQ(), target.getR());
+        }
+
+        if (goalPosition == null) {
+            return findSimpleApproachMove(mover, target, obstacles);
+        }
+
+        // Строим путь через A*
+        List<HexCoord> path = findPathAStar(currentPos, goalPosition, obstacles, context);
+
+        if (path != null && path.size() > 1) {
+            // Сохраняем путь в юните
+            mover.setPath(path, goalPosition);
+            mover.advancePath(); // Пропускаем первый элемент (текущая позиция)
+            return path.get(1);
+        }
+
+        // A* не нашёл путь - используем простое приближение
+        return findSimpleApproachMove(mover, target, obstacles);
     }
 
-    private HexCoord findGreedyMove(BattleUnit mover, BattleUnit target, Set<String> obstacles) {
-        int[][] directions = {{1, 0}, {1, -1}, {0, -1}, {-1, 0}, {-1, 1}, {0, 1}};
+    /**
+     * Простое приближение к цели без сложных вычислений
+     */
+    private HexCoord findSimpleApproachMove(BattleUnit mover, BattleUnit target, Set<String> obstacles) {
+        int[][] directions = {
+                {1, 0}, {1, -1}, {0, -1}, {-1, 0}, {-1, 1}, {0, 1}
+        };
+
         HexCoord currentPos = new HexCoord(mover.getQ(), mover.getR());
         HexCoord targetPos = new HexCoord(target.getQ(), target.getR());
-        int bestDistance = calculateDistance(currentPos.q, currentPos.r, targetPos.q, targetPos.r);
-        HexCoord bestMove = null;
+        int currentDistance = calculateDistance(currentPos.q, currentPos.r, targetPos.q, targetPos.r);
+
+        List<HexCoord> approachingMoves = new ArrayList<>();
 
         for (int[] dir : directions) {
             int newQ = currentPos.q + dir[0];
@@ -294,46 +224,239 @@ public class BattleService {
             String key = newQ + ":" + newR;
 
             if (!obstacles.contains(key)) {
-                int dist = calculateDistance(newQ, newR, targetPos.q, targetPos.r);
-                if (dist < bestDistance) {
-                    bestDistance = dist;
-                    bestMove = new HexCoord(newQ, newR);
+                int newDistance = calculateDistance(newQ, newR, targetPos.q, targetPos.r);
+                if (newDistance < currentDistance) {
+                    approachingMoves.add(new HexCoord(newQ, newR));
                 }
             }
         }
 
-        // Если не нашли лучший ход, попробуем случайный свободный
-        if (bestMove == null) {
-            List<int[]> shuffled = Arrays.asList(directions);
-            Collections.shuffle(shuffled, random);
-            for (int[] dir : shuffled) {
-                int newQ = currentPos.q + dir[0];
-                int newR = currentPos.r + dir[1];
-                if (!obstacles.contains(newQ + ":" + newR)) {
-                    return new HexCoord(newQ, newR);
+        if (!approachingMoves.isEmpty()) {
+            return approachingMoves.get(random.nextInt(approachingMoves.size()));
+        }
+
+        // Если не можем приблизиться, пробуем боковой ход
+        for (int[] dir : directions) {
+            int newQ = currentPos.q + dir[0];
+            int newR = currentPos.r + dir[1];
+            String key = newQ + ":" + newR;
+
+            if (!obstacles.contains(key)) {
+                return new HexCoord(newQ, newR);
+            }
+        }
+
+        return null;
+    }
+
+    private List<HexCoord> findFreeAttackPositions(BattleUnit target, int range, Set<String> obstacles) {
+        List<HexCoord> positions = new ArrayList<>();
+        int targetQ = target.getQ();
+        int targetR = target.getR();
+
+        for (int dq = -range; dq <= range; dq++) {
+            for (int dr = -range; dr <= range; dr++) {
+                int q = targetQ + dq;
+                int r = targetR + dr;
+                int dist = calculateDistance(q, r, targetQ, targetR);
+
+                if (dist > 0 && dist <= range) {
+                    String key = q + ":" + r;
+                    if (!obstacles.contains(key)) {
+                        positions.add(new HexCoord(q, r));
+                    }
                 }
             }
         }
-        return bestMove;
+
+        return positions;
+    }
+
+    private HexCoord findClosestPosition(HexCoord from, List<HexCoord> positions) {
+        if (positions.isEmpty()) return null;
+
+        HexCoord closest = null;
+        int minDist = Integer.MAX_VALUE;
+
+        for (HexCoord pos : positions) {
+            int dist = calculateDistance(from.q, from.r, pos.q, pos.r);
+            if (dist < minDist) {
+                minDist = dist;
+                closest = pos;
+            }
+        }
+
+        return closest;
+    }
+
+    private List<HexCoord> findPathAStar(HexCoord start, HexCoord goal, Set<String> obstacles, PathfindingContext context) {
+        context.clear();
+
+        AStarNode startNode = new AStarNode(start, null, 0, heuristicDistance(start, goal));
+        context.openSet.offer(startNode);
+        context.allNodes.put(start.toKey(), startNode);
+
+        int[][] directions = {{1, 0}, {1, -1}, {0, -1}, {-1, 0}, {-1, 1}, {0, 1}};
+        int iterations = 0;
+
+        while (!context.openSet.isEmpty() && iterations < MAX_PATHFINDING_ITERATIONS) {
+            iterations++;
+            AStarNode current = context.openSet.poll();
+            if (current == null) break;
+
+            if (current.coord.equals(goal)) {
+                return reconstructPath(current);
+            }
+
+            String currentKey = current.coord.toKey();
+            if (context.closedSet.contains(currentKey)) continue;
+            context.closedSet.add(currentKey);
+
+            for (int[] dir : directions) {
+                HexCoord neighbor = new HexCoord(current.coord.q + dir[0], current.coord.r + dir[1]);
+                String neighborKey = neighbor.toKey();
+
+                if (obstacles.contains(neighborKey) || context.closedSet.contains(neighborKey)) continue;
+
+                double tentativeG = current.g + 1;
+                AStarNode neighborNode = context.allNodes.get(neighborKey);
+
+                if (neighborNode == null || tentativeG < neighborNode.g) {
+                    double h = heuristicDistance(neighbor, goal);
+                    if (neighborNode != null) {
+                        context.openSet.remove(neighborNode);
+                    }
+                    neighborNode = new AStarNode(neighbor, current, tentativeG, h);
+                    context.allNodes.put(neighborKey, neighborNode);
+                    context.openSet.offer(neighborNode);
+                }
+            }
+        }
+
+        return null;
+    }
+
+    private static void executeMove(BattleUnit mover, HexCoord destination, List<BattleLogEntryDto> log, double currentTime, Map<String, BattleUnit> occupiedCells) {
+        int startQ = mover.getQ();
+        int startR = mover.getR();
+        String oldPositionKey = mover.getPositionKey();
+
+        occupiedCells.remove(oldPositionKey);
+        mover.move(destination.q, destination.r);
+        occupiedCells.put(mover.getPositionKey(), mover);
+
+        Map<String, Object> moveData = new HashMap<>();
+        moveData.put("fromQ", startQ);
+        moveData.put("fromR", startR);
+        moveData.put("toQ", destination.q);
+        moveData.put("toR", destination.r);
+        moveData.put("targetId", "not_needed");
+        moveData.put("time", currentTime);
+        moveData.put("duration", ACTION_DURATION);
+        log.add(new BattleLogEntryDto(BattleLogEntryDto.LogEntryType.MOVE, mover.getId(), moveData));
+    }
+
+    private void removeDeadUnits(List<BattleUnit> teamList, List<BattleUnit> allUnitsList, Map<String, BattleUnit> occupiedCells) {
+        List<BattleUnit> deadUnitsInTeam = new ArrayList<>();
+        Iterator<BattleUnit> iterator = teamList.iterator();
+        while(iterator.hasNext()){
+            BattleUnit unit = iterator.next();
+            if (unit.isDead()){
+                deadUnitsInTeam.add(unit);
+                occupiedCells.remove(unit.getPositionKey());
+                iterator.remove();
+            }
+        }
+        allUnitsList.removeAll(deadUnitsInTeam);
+    }
+
+    private void shuffleInPlace(List<BattleUnit> list) {
+        for (int i = list.size() - 1; i > 0; i--) {
+            int j = random.nextInt(i + 1);
+            BattleUnit temp = list.get(i);
+            list.set(i, list.get(j));
+            list.set(j, temp);
+        }
+    }
+
+    private static void performAttack(BattleUnit attacker, BattleUnit target, List<BattleLogEntryDto> log, double currentTime) {
+        if (target.isDead()) return;
+
+        int baseDamage = random.nextInt(attacker.getMaxAttack() - attacker.getMinAttack() + 1) + attacker.getMinAttack();
+        int actualDamage = Math.max(0, baseDamage - target.getArmor());
+        target.takeDamage(actualDamage);
+        boolean isKill = target.isDead();
+
+        Map<String, Object> attackData = new HashMap<>();
+        attackData.put("targetId", target.getId());
+        attackData.put("damage", actualDamage);
+        attackData.put("isKill", isKill);
+        attackData.put("remainingHp", target.getCurrentHp());
+        attackData.put("targetMaxHp", target.getHp());
+        attackData.put("time", currentTime);
+        attackData.put("duration", ACTION_DURATION);
+        log.add(new BattleLogEntryDto(BattleLogEntryDto.LogEntryType.ATTACK, attacker.getId(), attackData));
+
+        if (isKill) {
+            Map<String, Object> deathData = new HashMap<>();
+            deathData.put("killerId", attacker.getId());
+            deathData.put("time", currentTime);
+            log.add(new BattleLogEntryDto(BattleLogEntryDto.LogEntryType.DEATH, target.getId(), deathData));
+        }
     }
 
     private BattleUnit findOptimalTarget(BattleUnit attacker, List<BattleUnit> targets) {
         int attackPower = (attacker.getMinAttack() + attacker.getMaxAttack()) / 2;
+        int attackRange = attacker.getRange();
+        BattleUnit bestInRange = null;
+        boolean foundKillableInRange = false;
+        int lowestHpInRange = Integer.MAX_VALUE;
+        int closestInRange = Integer.MAX_VALUE;
 
-        // Приоритет: добить раненых
-        BattleUnit wounded = targets.stream()
-                .filter(t -> !t.isDead() && t.getCurrentHp() <= attackPower * 2)
-                .min(Comparator.comparingInt(BattleUnit::getCurrentHp)
-                        .thenComparingInt(t -> calculateDistance(attacker, t)))
-                .orElse(null);
+        for (BattleUnit t : targets) {
+            if (t.isDead()) continue;
+            int dist = calculateDistance(attacker, t);
 
-        if (wounded != null) return wounded;
+            if (dist <= attackRange) {
+                boolean canKill = t.getCurrentHp() <= attackPower;
+                int hp = t.getCurrentHp();
 
-        // Иначе выбираем ближайшего
-        return targets.stream()
-                .filter(t -> !t.isDead())
-                .min(Comparator.comparingInt(t -> calculateDistance(attacker, t)))
-                .orElse(null);
+                if (canKill && !foundKillableInRange) {
+                    bestInRange = t;
+                    foundKillableInRange = true;
+                    lowestHpInRange = hp;
+                    closestInRange = dist;
+                } else if (canKill && foundKillableInRange) {
+                    if (hp < lowestHpInRange || (hp == lowestHpInRange && dist < closestInRange)) {
+                        bestInRange = t;
+                        lowestHpInRange = hp;
+                        closestInRange = dist;
+                    }
+                } else if (!foundKillableInRange) {
+                    if (hp < lowestHpInRange || (hp == lowestHpInRange && dist < closestInRange)) {
+                        bestInRange = t;
+                        lowestHpInRange = hp;
+                        closestInRange = dist;
+                    }
+                }
+            }
+        }
+
+        if (bestInRange != null) {
+            return bestInRange;
+        }
+
+        BattleUnit closestTarget = null;
+        int minDistance = Integer.MAX_VALUE;
+        for (BattleUnit t : targets) {
+            if (t.isDead()) continue;
+            int dist = calculateDistance(attacker, t);
+            if (dist < minDistance) {
+                minDistance = dist;
+                closestTarget = t;
+            }
+        }
+        return closestTarget;
     }
 
     private double heuristicDistance(HexCoord a, HexCoord b) {
@@ -360,64 +483,41 @@ public class BattleService {
         return calculateDistance(a.getQ(), a.getR(), b.getQ(), b.getR());
     }
 
-    private BattleResultDto buildBattleResult(Quest quest, List<BattlePirateDto> initialPlacement,
-                                              List<BattleUnit> allies, List<BattleUnit> enemies,
-                                              List<BattleLogEntryDto> battleLog) {
+    private BattleResultDto buildBattleResult(Quest quest, List<BattlePirateDto> initialPlacement, List<BattleUnit> allies, List<BattleUnit> enemies, List<BattleLogEntryDto> battleLog) {
         TeamType winnerTeam = allies.isEmpty() ? TeamType.ENEMY : TeamType.ALLY;
-
-        List<String> allyLossesIds = initialPlacement.stream()
-                .filter(p -> p.getTeam() == TeamType.ALLY &&
-                        allies.stream().noneMatch(u -> u.getId().equals(p.getId())))
-                .map(BattlePirateDto::getId)
-                .collect(Collectors.toList());
-
-        List<String> enemyLossesIds = initialPlacement.stream()
-                .filter(p -> p.getTeam() == TeamType.ENEMY &&
-                        enemies.stream().noneMatch(u -> u.getId().equals(p.getId())))
-                .map(BattlePirateDto::getId)
-                .collect(Collectors.toList());
-
+        List<String> allyLossesIds = initialPlacement.stream().filter(p -> p.getTeam() == TeamType.ALLY && allies.stream().noneMatch(u -> u.getId().equals(p.getId()))).map(BattlePirateDto::getId).collect(Collectors.toList());
+        List<String> enemyLossesIds = initialPlacement.stream().filter(p -> p.getTeam() == TeamType.ENEMY && enemies.stream().noneMatch(u -> u.getId().equals(p.getId()))).map(BattlePirateDto::getId).collect(Collectors.toList());
         BattleResultDto.RewardsDto rewards;
         if (winnerTeam == TeamType.ALLY) {
-            rewards = BattleResultDto.RewardsDto.builder()
-                    .experience(quest.getExpReward() != null ? quest.getExpReward() : 0L)
-                    .gold(quest.getGoldReward() != null ? quest.getGoldReward() : 0L)
-                    .wood(quest.getWoodReward() != null ? quest.getWoodReward() : 0L)
-                    .stone(quest.getStoneReward() != null ? quest.getStoneReward() : 0L)
-                    .items(quest.getItemRewards().stream()
-                            .map(r -> new ItemRewardDto(r.getItem().getItemKey(),
-                                    r.getItem().getName(), r.getItem().getImageUrl(), r.getQuantity()))
-                            .collect(Collectors.toList()))
-                    .build();
+            rewards = BattleResultDto.RewardsDto.builder().experience(quest.getExpReward() != null ? quest.getExpReward() : 0L).gold(quest.getGoldReward() != null ? quest.getGoldReward() : 0L).wood(quest.getWoodReward() != null ? quest.getWoodReward() : 0L).stone(quest.getStoneReward() != null ? quest.getStoneReward() : 0L).items(quest.getItemRewards().stream().map(r -> new ItemRewardDto(r.getItem().getItemKey(), r.getItem().getName(), r.getItem().getImageUrl(), r.getQuantity())).collect(Collectors.toList())).build();
         } else {
-            rewards = BattleResultDto.RewardsDto.builder()
-                    .experience(0).gold(0).wood(0L).stone(0L).items(List.of()).build();
+            rewards = BattleResultDto.RewardsDto.builder().experience(0L).gold(0L).wood(0L).stone(0L).items(Collections.emptyList()).build();
         }
-
-        return BattleResultDto.builder()
-                .winnerTeam(winnerTeam)
-                .rewards(rewards)
-                .log(battleLog)
-                .yourLossesIds(allyLossesIds)
-                .enemyLossesIds(enemyLossesIds)
-                .build();
+        return BattleResultDto.builder().winnerTeam(winnerTeam).rewards(rewards).log(battleLog).yourLossesIds(allyLossesIds).enemyLossesIds(enemyLossesIds).build();
     }
 
-    // === ВСПОМОГАТЕЛЬНЫЕ КЛАССЫ ===
+    private static class PathfindingContext {
+        final PriorityQueue<AStarNode> openSet = new PriorityQueue<>(Comparator.comparingDouble(AStarNode::getF));
+        final Set<String> closedSet = new HashSet<>();
+        final Map<String, AStarNode> allNodes = new HashMap<>();
+        void clear() {
+            openSet.clear();
+            closedSet.clear();
+            allNodes.clear();
+        }
+    }
+
     @Getter
     private static class HexCoord {
         final int q;
         final int r;
-
         HexCoord(int q, int r) {
             this.q = q;
             this.r = r;
         }
-
         String toKey() {
             return q + ":" + r;
         }
-
         @Override
         public boolean equals(Object o) {
             if (this == o) return true;
@@ -425,7 +525,6 @@ public class BattleService {
             HexCoord hexCoord = (HexCoord) o;
             return q == hexCoord.q && r == hexCoord.r;
         }
-
         @Override
         public int hashCode() {
             return Objects.hash(q, r);
@@ -439,7 +538,6 @@ public class BattleService {
         final double g;
         final double h;
         final double f;
-
         AStarNode(HexCoord coord, AStarNode parent, double g, double h) {
             this.coord = coord;
             this.parent = parent;
@@ -454,14 +552,55 @@ public class BattleService {
     private static class BattleUnit extends BattlePirateDto {
         private int currentHp;
         private int range;
+        private String positionKey;
+        private double nextActionTime;
+
+        // Сохраненный путь
+        private List<HexCoord> savedPath;
+        private int pathIndex;
+        private HexCoord pathGoal;
 
         public BattleUnit(BattlePirateDto dto) {
-            super(dto.getId(), dto.getTeam(), dto.getHp(), dto.getMinAttack(),
-                    dto.getMaxAttack(), dto.getArmor(), dto.getXp(), dto.getQ(),
-                    dto.getR(), dto.getImageId(), dto.getMovement(), dto.getAttackSpeed(),
-                    dto.getRange());
+            super(dto.getId(), dto.getTeam(), dto.getHp(), dto.getMinAttack(), dto.getMaxAttack(), dto.getArmor(), dto.getXp(), dto.getQ(), dto.getR(), dto.getImageId(), dto.getMovement(), dto.getAttackSpeed(), dto.getRange());
             this.currentHp = dto.getHp();
             this.range = dto.getRange() > 0 ? dto.getRange() : 1;
+            this.positionKey = dto.getQ() + ":" + dto.getR();
+            this.nextActionTime = 0.0;
+            this.savedPath = null;
+            this.pathIndex = 0;
+            this.pathGoal = null;
+        }
+
+        public void setPath(List<HexCoord> path, HexCoord goal) {
+            this.savedPath = new ArrayList<>(path);
+            this.pathIndex = 0;
+            this.pathGoal = goal;
+        }
+
+        public void clearPath() {
+            this.savedPath = null;
+            this.pathIndex = 0;
+            this.pathGoal = null;
+        }
+
+        public boolean hasPath() {
+            return savedPath != null && pathIndex < savedPath.size();
+        }
+
+        public HexCoord getNextStepFromPath() {
+            if (hasPath() && pathIndex + 1 < savedPath.size()) {
+                return savedPath.get(pathIndex + 1);
+            }
+            return null;
+        }
+
+        public void advancePath() {
+            if (savedPath != null) {
+                pathIndex++;
+                if (pathIndex >= savedPath.size()) {
+                    clearPath();
+                }
+            }
         }
 
         public void takeDamage(int damage) {
@@ -475,6 +614,7 @@ public class BattleService {
         public void move(int newQ, int newR) {
             this.setQ(newQ);
             this.setR(newR);
+            this.positionKey = newQ + ":" + newR;
         }
     }
 }
